# live555

./: .gitignore  CMakeLists.txt  Live555.sln  LiveCompile.sln  README.md
BasicUsageEnvironment/: BasicUsageEnvironment.vcxproj  BasicUsageEnvironment.vcxproj.filters  CMakeLists.txt  ReadMe.txt
CommonPlay/: CMakeLists.txt  CommonPlay.vcxproj  CommonPlay.vcxproj.filters  audio-MPEG4-GENERIC-2  audio-VORBIS-2  audio-VORBIS-2.h264  video-H264-1  video-H264-1 (2).h264  video-H264-1.h264
LiveCompile/: CYHMediaClient.cpp  CYHMediaClient.h  LiveCompile.vcxproj  LiveCompile.vcxproj.filters
MediaServer/: MediaServer.vcxproj  MediaServer.vcxproj.filters
MediaServer/lib/: BasicUsageEnvironment.lib  UsageEnvironment.lib  groupsock.lib
RtspClient/: 1.h264  CMakeLists.txt  H264_2_RGB.cpp  RtspClient.cpp  RtspClient.vcxproj  RtspClient.vcxproj.filters  live555MediaServer.cpp  playCommon.cpp
RtspClient/lib/: BasicUsageEnvironment.lib  UsageEnvironment.lib  groupsock.lib
RtspClient/x64/Release/MediaServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MediaServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RtspPlayer/: CMakeLists.txt  RtspClient.cpp  RtspPlayer.vcxproj
RtspServer/: CMakeLists.txt  DynamicRTSPServer.cpp  RtspServer.vcxproj  live555MediaServer.cpp
UsageEnvironment/: CMakeLists.txt  ReadMe.txt  UsageEnvironment.vcxproj  UsageEnvironment.vcxproj.filters
groupsock/: CMakeLists.txt  GroupEId.cpp  ReadMe.txt  groupsock.vcxproj  groupsock.vcxproj.filters
include/: H264_2_RGB.cpp  RtspClient.cpp
ipch/BASICUSAGEENVIRONMENT-7da60bbb/: BASICUSAGEENVIRONMENT-3b10d570.ipch  BASICUSAGEENVIRONMENT-b490de58.ipch  BASICUSAGEENVIRONMENT-eed9eb92.ipch
ipch/LIVEMEDIA-6497a183/: LIVEMEDIA-260d48d4.ipch
liveMedia/: CMakeLists.txt  H264or5VideoFileSink.cpp  RTPSink.cpp  ReadMe.txt  liveMedia.vcxproj  liveMedia.vcxproj.filters
